--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
     font-weight: bold;
 
 }
+h1{
+    font-family: 'Oswald', sans-serif;
+}
 .image-background{
 margin: 20px 20px 0 20px;
 padding: 20px;
